tests/baselines/reference/parserForInStatement4.errors.txt
parserForInStatement4.ts(1,10): error TS1189: The variable declaration of a 'for...in' statement cannot have an initializer.
parserForInStatement4.ts(1,19): error TS2304: Cannot find name 'X'.


==== parserForInStatement4.ts (2 errors) ====
    for (var a = 1 in X) {
             ~
!!! error TS1189: The variable declaration of a 'for...in' statement cannot have an initializer.
                      ~
!!! error TS2304: Cannot find name 'X'.
    }